# axum_template

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  watch.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  main.rs  models.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: mod.rs
src/ctx/: error.rs  mod.rs
src/model/: base.rs  error.rs  mod.rs  models.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/sql/dev_init/: 00-recreate-db.sql  01-create-schema.sql
src/utils/: error.rs  mod.rs
src/web/: mod.rs  mw_auth.rs  route_login.rs  route_ticket.rs  route_tickets.rs
tests/: quick_dev.rs
