[package]
name = "axum_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "macros"] } 
tokio = { version = "1.32.0", features = ["full"] }
serde =  { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.105"
reqwest = "0.11.20"
tower-http = { version = "0.4.3", features = ["fs"] }
tower-cookies = "0.9"

lazy-regex = "3.0.1"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
